force-app/main/default/objects/tc9_pr__Withholding_Rule__c/tc9_pr__Withholding_Rule__c.object-meta.xml
<CustomObject>
    <label>Withholding Rule</label>
    <nameField>
        <label>Withholding Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>