force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_et__Superannuation_Employment_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Superannuation_Employment_Cost__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Employment Cost that applies to the Withholding Rule</description>
    <inlineHelpText>Defines the Employment Cost that applies to the Withholding Rule</inlineHelpText>
    <label>Superannuation Employment Cost</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Employment Cost defined on the Withholding Rule does not have a Record Type of Superannuation. Please review.</errorMessage>
        <filterItems>
            <field>tc9_pr__Employment_Cost__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Superannuation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Employment_Cost__c</referenceTo>
    <relationshipLabel>Withholding Rules</relationshipLabel>
    <relationshipName>Withholding_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>