force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__ATO_Tax_Scale__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Tax_Scale__c</fullName>
    <description>Specifies which ATO issued tax scale the Withholding Rule record represents.</description>
    <inlineHelpText>Specifies which ATO issued tax scale the Withholding Rule record represents.</inlineHelpText>
    <label>ATO Tax Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4R</fullName>
            </value>
            <value>
                <fullName>4F</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>9C</fullName>
            </value>
            <value>
                <fullName>9I</fullName>
            </value>
            <value>
                <fullName>9S</fullName>
            </value>
            <value>
                <fullName>WHM</fullName>
            </value>
            <value>
                <fullName>Additional Week</fullName>
            </value>
            <value>
                <fullName>Additional Fortnight</fullName>
            </value>
            <value>
                <fullName>LSA</fullName>
            </value>
            <value>
                <fullName>LSB</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>LSD</fullName>
            </value>
            <value>
                <fullName>ETP</fullName>
            </value>
            <value>
                <fullName>Preservation Age</fullName>
            </value>
            <value>
                <fullName>TAX SCALE</fullName>
                <isActive>false</isActive>
                <label>TAX SCALE</label>
            </value>
            <value>
                <fullName>WOI</fullName>
                <isActive>false</isActive>
                <label>WOI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>