force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The first date from which the Withholding Rule may be selected for use in a Payee Pay Batch based on the Pay Batch payment date</description>
    <inlineHelpText>The first date from which the Withholding Rule may be selected for use in a Payee Pay Batch based on the Pay Batch payment date</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>