force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__ETP_Cap__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Cap__c</fullName>
    <description>The ATO regulated ETP cap amount.</description>
    <inlineHelpText>The ATO regulated ETP cap amount.</inlineHelpText>
    <label>ETP Cap</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>