force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__External_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__External_Id__c</fullName>
    <description>2c9 Payroll Org Withholding rule Id</description>
    <externalId>true</externalId>
    <inlineHelpText>2c9 Payroll Org Withholding rule Id</inlineHelpText>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>