force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__External_Source__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__External_Source__c</fullName>
    <description>Data source for external Id: Data Migration, API Sync etc</description>
    <inlineHelpText>Data source for external Id: Data Migration, API Sync etc</inlineHelpText>
    <label>External Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>