force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__HELP_TSL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__HELP_TSL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this table will be used in the calculation of HELP/SSL/TSL</description>
    <inlineHelpText>Indicates that this table will be used in the calculation of HELP/SSL/TSL</inlineHelpText>
    <label>HELP/TSL</label>
    <type>Checkbox</type>
</CustomField>