force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__SFSS__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__SFSS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this table will be used in the calculation of SFSS</description>
    <inlineHelpText>Indicates that this table will be used in the calculation of SFSS</inlineHelpText>
    <label>SFSS</label>
    <type>Checkbox</type>
</CustomField>