force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__STSL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STSL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a withholding rule record for STSL calculation</description>
    <inlineHelpText>This is a withholding rule record for STSL calculation</inlineHelpText>
    <label>STSL</label>
    <type>Checkbox</type>
</CustomField>