force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_Default_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Default_Tax_Code__c</fullName>
    <description>Identifies the Default Tax Code for the financial year.</description>
    <inlineHelpText>Identifies the Default Tax Code for the financial year.</inlineHelpText>
    <label>UK Default Tax Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>