force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_NI_Default_Category__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Default_Category__c</fullName>
    <description>The default UK NI Category that will be applied when the field is blank on a Payee Withholding record.</description>
    <inlineHelpText>The default UK NI Category that will be applied when the field is blank on a Payee Withholding record.</inlineHelpText>
    <label>UK NI Default Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_NI_Category_Picklists</valueSetName>
    </valueSet>
</CustomField>