force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_NI_Investment_Zone_Categories__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Investment_Zone_Categories__c</fullName>
    <description>A list of NI Categories that indicate the Payee is in an Investment Zone.</description>
    <inlineHelpText>A list of NI Categories that indicate the Payee is in an Investment Zone.</inlineHelpText>
    <label>UK NI Investment Zone Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>