force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_NI_LEL_Monthly__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_LEL_Monthly__c</fullName>
    <description>Monthly Lower Earnings Limit Threshold for UK NI calculations.</description>
    <inlineHelpText>Monthly Lower Earnings Limit Threshold for UK NI calculations.</inlineHelpText>
    <label>UK NI LEL - Monthly</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>