force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_NI_Under_21_Categories__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Under_21_Categories__c</fullName>
    <description>A list of NI Categories that indicate the Payee is under 21 years old.</description>
    <inlineHelpText>A list of NI Categories that indicate the Payee is under 21 years old.</inlineHelpText>
    <label>UK NI Under 21 Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>