force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_NI_UST_Annual__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_UST_Annual__c</fullName>
    <description>Annual Upper Secondary Threshold for UK NI calculations.</description>
    <inlineHelpText>Annual Upper Secondary Threshold for UK NI calculations.</inlineHelpText>
    <label>UK NI UST - Annual</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>