force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_PAYE_Specific_Country__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_PAYE_Specific_Country__c</fullName>
    <description>Denotes, for a specific country, which rates and thresholds should be applied during the calculation of UK PAYE.</description>
    <inlineHelpText>Denotes, for a specific country, which rates and thresholds should be applied during the calculation of UK PAYE.</inlineHelpText>
    <label>UK PAYE Specific Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_PAYE_Country_Picklists</valueSetName>
    </valueSet>
</CustomField>