force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_Special_Tax_Codes__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Special_Tax_Codes__c</fullName>
    <description>A list of valid UK Special Tax Codes for use in UK PAYE calculations and validations.</description>
    <inlineHelpText>A list of valid UK Special Tax Codes for use in UK PAYE calculations and validations.</inlineHelpText>
    <label>UK Special Tax Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>