force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__UK_Valid_Tax_Code_Prefixes__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Valid_Tax_Code_Prefixes__c</fullName>
    <description>A list of valid Tax Code prefixes for use in UK PAYE calculations and validations.</description>
    <inlineHelpText>A list of valid Tax Code prefixes for use in UK PAYE calculations and validations.</inlineHelpText>
    <label>UK Valid Tax Code Prefixes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>