force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__Whole_of_Income_Cap__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Whole_of_Income_Cap__c</fullName>
    <description>The ATO regulated Whole of Income Cap.</description>
    <inlineHelpText>The ATO regulated Whole of Income Cap.</inlineHelpText>
    <label>Whole of Income Cap</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>