force-app/main/default/objects/tc9_pr__Withholding_Rule__c/fields/tc9_pr__Withholding_Year__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Withholding_Year__c</fullName>
    <description>A text narrative for grouping withholding records in the View Withholding Rules user interface.</description>
    <inlineHelpText>A text narrative for grouping withholding records in the View Withholding Rules user interface.</inlineHelpText>
    <label>Withholding Year</label>
    <length>9</length>
    <type>Text</type>
</CustomField>