force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__AU_GST.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_GST</fullName>
    <active>true</active>
    <description>Used to perform calculation of Australian Goods and Services Tax in Payroll</description>
    <label>AU GST</label>
</RecordType>