force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__AU_PAYG.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_PAYG</fullName>
    <active>true</active>
    <description>Used to define Australian PAYG withholding rules</description>
    <label>AU PAYG</label>
</RecordType>