force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__AU_Payroll_Tax.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_Payroll_Tax</fullName>
    <active>true</active>
    <description>Rates, thresholds and relevant data used to control Australian Payroll Tax reporting</description>
    <label>AU Payroll Tax</label>
</RecordType>