force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__AU_SUPER.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__AU_SUPER</fullName>
    <active>true</active>
    <label>AU SUPER</label>
</RecordType>