force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__NZ_PAYE.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__NZ_PAYE</fullName>
    <active>true</active>
    <description>Used to define New Zealand PAYG withholding rules</description>
    <label>NZ PAYE</label>
</RecordType>