force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__UK_NI.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__UK_NI</fullName>
    <active>true</active>
    <label>UK NI</label>
</RecordType>