force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__UK_PAYE.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__UK_PAYE</fullName>
    <active>true</active>
    <label>UK PAYE</label>
</RecordType>