force-app/main/default/objects/tc9_pr__Withholding_Rule__c/recordTypes/tc9_pr__UK_Student_Loans.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__UK_Student_Loans</fullName>
    <active>true</active>
    <label>UK Student Loans</label>
</RecordType>