force-app/main/default/objects/tc9_pr__Withholding_Rule__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__ATO_Tax_Scale__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Expiry_Date__c</columns>
    <columns>tc9_pr__SFSS__c</columns>
    <columns>tc9_pr__HELP_TSL__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Withholding_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>